--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <div id="app"></div>
     <p>this is a test</p>
+    <p>first fix</p>
     <script src="src/index.js"></script>
   </body>
 </html>
